# katr-search

./: .gitignore  CMakeLists.txt  DAprune.cpp  Katr-search.cpp  README.md  USA-road-t.NY-stripped-1000.gr  USA-road-t.NY-stripped-1000.poi  daprune.cpp  dijkstra.cpp  dijkstra.h  distance.h  file.cpp  file.h  floyd.h  graph.cpp  graph.h  katr-search.cpp  katr.cpp  kosr.cpp  osscaling.cpp  poi-generator.cpp  poi.cpp  poi.h  rose.cpp
src/CreatData/: GraphData.java  IntoData.java
src/CreatGraph/: Creat_MinBP.java  Creatbfpoint.java  Creatbountpoint.java  Creatbplist.java  Creatlist.java  Creatpoilist.java  Creatsg.java  xiugai.java
src/CreatTxt/: CreatBPList.java  CreatBountPoint.java  CreatList.java  CreatMinBP.java  CreatPOIList.java  CreatSG.java  Creat_metis.java  Creat_metis_danbianshaung.java  Creat_xbranches.java  FinfMovePoint.java
src/CreateData/: GraphData.java  IntoData.java
src/CreateTxt/: CreatBPList.java  CreatBountPoint.java  CreatList.java  CreatMinBP.java  CreatPOIList.java  CreatSG.java  Creat_metis.java  Creat_metis_danbianshaung.java  Creat_xbranches.java  FinfMovePoint.java
src/DataPreprocessing/: GraphPreprocessing.java  IntoData.java
src/GraphEntity/: Class_BPList.java  EdegeNode.java  Lower_bound.java  MyGraph.java  Node.java  Number.java  POI.java  Point.java  huoqu_txt.java  keyWordList.java  list.java  movePoint.java
src/KATR/: KATR.java
src/KATRAlgorithm/: FindInitialTopk.java  FindTopk.java  FindTopk_SToE.java
src/KKRSAlgorithm/: Dijkstia.java  Find_TopK_A_db3.java  Find_Topk_A.java  Find_Topk_A_db.java  Find_Topk_A_db2.java  (+4 more)
(+94 files in other folders)
